<resources>
    <string name="app_name">Bolachas</string>
    <string name="artist">DISCO</string>
    <string name="record_label">GRAVADORA</string>
    <string name="year">ANO</string>
    <string name="style">ARTISTA</string>
    <string name="shelf">PRATELEIRA</string>
    <string name="update">Salvar</string>
    <string name="remove">Remover</string>
    <string name="id">ID</string>
    <string name="list">Listar</string>
    <string name="edit">Editar</string>
    <string name="create">Criar</string>
    <string name="bolachas">Bolachas APP</string>
    <string name="title_activity_update">update</string>
    <string name="title_activity_list_data">list</string>
    <string name="title_activity_register">register</string>
    <string name="bt_adicionar_disco">Botão para Adicionar Disco</string>
    <string name="escolha_a_prateleira">Escolha a Prateleira</string>
    <string name="prateleira">Prateleira</string>
    <string name="moacir_santos">Moacir Santos</string>
    <string name="artista">Artista</string>
    <string name="ano_de_lan_amento">Ano de Lançamento</string>
    <string name="Ano">1965</string>
    <string name="som_livre">Som Livre</string>
    <string name="gravadora">Gravadora</string>
    <string name="coisas">Coisas</string>
    <string name="digite_o_nome_do_disco">Digite o nome do disco</string>
    <string name="botao_para_voltar">Botao para Voltar</string>
    <string name="cat_logo_de_discos">Catálogo de Discos</string>
    <string name="titulo_bolachas">Bolachas</string>
    <string name="bot_de_cadastro">Botão de cadastro</string>
</resources>