<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="@color/amamrelo_claro"
        android:background="@color/roxo_projeto"
        android:text="LISTA DE DISCOS"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp" />
    <!-- LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/borda_item"
        android:layout_gravity="top"
        android:layout_marginTop="35dp">

        <!-- Conteúdo do LinearLayout -->
        <TextView
            android:id="@+id/titleDisc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/amamrelo_claro"
            android:text="@string/artist"
            android:textSize="19sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/titleRecord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/amamrelo_claro"
            android:text="@string/record_label"
            android:textSize="19sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/titleShelf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/amamrelo_claro"
            android:text="@string/shelf"
            android:textSize="19sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp" />

    </LinearLayout>

    <!-- RecyclerView abaixo do LinearLayout -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:padding="0dp"
        android:layout_marginTop="60dp" />

    <!-- Botão de Voltar no final -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="bottom">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:contentDescription="@string/remove"
            android:src="@drawable/back"
            android:background="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center|bottom"
            android:text="Voltar"
            android:textColor="@color/roxo_projeto"
            android:textSize="16sp"
            android:textStyle="bold"/>'
    </LinearLayout>

</FrameLayout>
