<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/roxo_projeto"
    tools:context=".activities.RegisterActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#9C27B0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/fascinate_inline"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1"
            android:text="Bolachas"
            android:textColor="@color/amamrelo_claro"
            android:textSize="50sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/amamrelo_claro"
        android:fontFamily="@font/fascinate_inline"
        android:shadowColor="@color/black"
        android:gravity="center"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:layout_marginTop="40dp"
        android:text="EDITAR DISCO"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/amamrelo_claro"
        android:layout_marginTop="30dp"
        android:text="@string/artist"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUpdateArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/amamrelo_claro"
        android:textColorHint="@color/amamrelo_claro"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/rounded_border" />

    <TextView
        android:id="@+id/tvRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/amamrelo_claro"
        android:layout_marginTop="20dp"
        android:text="@string/record_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUpdateRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/amamrelo_claro"
        android:textColor="@color/amamrelo_claro"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/rounded_border" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/amamrelo_claro"
        android:layout_marginTop="20dp"
        android:text="@string/year"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUpdateYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/amamrelo_claro"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/amamrelo_claro"
        android:ems="10"
        android:inputType="number"
        android:background="@drawable/rounded_border" />

    <TextView
        android:id="@+id/tvStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/style"
        android:layout_marginTop="20dp"
        android:textColor="@color/amamrelo_claro"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUpdateStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/amamrelo_claro"
        android:textColor="@color/amamrelo_claro"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/rounded_border" />

    <TextView
        android:id="@+id/tvShelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shelf"
        android:textColor="@color/amamrelo_claro"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUpdateShelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/amamrelo_claro"
        android:textColor="@color/amamrelo_claro"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/rounded_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btUpdateUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/roxo_projeto"
                android:contentDescription="@string/update"
                android:src="@drawable/floppy"
                android:tint="@color/amamrelo_claro"
                android:layout_marginTop="40dp"
                tools:ignore="UseAppTint" />

            <TextView
                android:id="@+id/tvSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="Salvar"
                android:textColor="@color/amamrelo_claro"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btUpdateDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/roxo_projeto"
                android:contentDescription="@string/remove"
                android:src="@drawable/recycle"
                android:tint="@color/amamrelo_claro"
                android:layout_marginTop="40dp"
                tools:ignore="UseAppTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="Excluir"
                android:textColor="@color/amamrelo_claro"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
